Lower JDK compilation version to 8 (#59)